--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Fady Abdelmalak</title>
 </head>
 <body>
-Welcome to my personal webpage!
+<main class="flex flex-col items-center justify-center">Welcome to my personal webpage!</main>
+
 </body>
 </html>
