--- a/index.html
+++ b/index.html
@@ -1,13 +1,474 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>Fady Abdelmalak</title>
-</head>
-<body>
-<main class="flex flex-col items-center justify-center">Welcome to my personal webpage!</main>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: "Inter", sans-serif;
+      }
+      @media print {
+        body {
+          background: white !important;
+          -webkit-print-color-adjust: exact !important;
+          print-color-adjust: exact !important;
+          margin: 0 !important;
+        }
+        main {
+          max-width: none !important;
+          padding: 0.75cm !important;
+          margin: 0 !important;
+        }
+        .page-break {
+          page-break-before: always;
+        }
+        .no-break {
+          page-break-inside: avoid;
+        }
+        a {
+          text-decoration: none !important;
+          color: black !important;
+        }
+        .print-shadow {
+          box-shadow: none !important;
+        }
+        .print-border {
+          border: 1px solid #e5e7eb !important;
+          margin: 0.5rem 0 !important;
+        }
+        .bg-white {
+          background-color: white !important;
+          padding: 1.5rem !important;
+          margin: 0.5rem 0 !important;
+        }
+        .rounded-lg {
+          border-radius: 0.5rem !important;
+        }
+      }
+      .section-title {
+        position: relative;
+        padding-bottom: 0.5rem;
+      }
+      .section-title::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 3rem;
+        height: 2px;
+        background-color: #3b82f6;
+      }
+      .skill-tag {
+        transition: all 0.2s ease;
+      }
+      .skill-tag:hover {
+        transform: translateY(-1px);
+      }
+      .experience-card,
+      .education-card,
+      .skill-card {
+        transition: all 0.2s ease;
+      }
+      .experience-card:hover,
+      .education-card:hover,
+      .skill-card:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+          0 2px 4px -1px rgba(0, 0, 0, 0.06);
+      }
+      @media (max-width: 640px) {
+        .header-links {
+          flex-direction: column;
+          gap: 0.5rem;
+        }
+        .header-links span {
+          display: none;
+        }
+        .experience-date {
+          margin-top: 0.5rem;
+        }
+        .experience-header {
+          flex-direction: column;
+        }
+        .skill-grid {
+          grid-template-columns: 1fr;
+        }
+      }
+    </style>
+    <title>Fady Abdelmalak - Software Engineer</title>
+  </head>
+  <body class="bg-gray-50">
+    <main class="max-w-4xl mx-auto p-4 sm:p-8">
+      <!-- Header Section -->
+      <header class="text-center mb-8 sm:mb-12 no-break">
+        <h1
+          class="text-3xl sm:text-5xl font-bold text-gray-800 mb-2 sm:mb-3 tracking-tight"
+        >
+          Fady Abdelmalak
+        </h1>
+        <p class="text-xl sm:text-2xl text-gray-600 font-light mb-4 sm:mb-6">
+          Software Engineer
+        </p>
+        <div
+          class="flex flex-col sm:flex-row justify-center gap-2 sm:gap-6 mt-4 sm:mt-6 text-gray-600 header-links"
+        >
+          <a
+            href="mailto:fady.m.abdelmalak@gmail.com"
+            class="hover:text-blue-600 transition-colors duration-200 flex items-center justify-center gap-2"
+          >
+            <svg
+              class="w-5 h-5"
+              fill="none"
+              stroke="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+              />
+            </svg>
+            fady.m.abdelmalak@gmail.com
+          </a>
+          <span class="text-gray-300 hidden sm:inline">•</span>
+          <a
+            href="https://linkedin.com/in/fadyabdelmalak"
+            class="hover:text-blue-600 transition-colors duration-200 flex items-center justify-center gap-2"
+          >
+            <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+              <path
+                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+              />
+            </svg>
+            LinkedIn
+          </a>
+          <span class="text-gray-300 hidden sm:inline">•</span>
+          <a
+            href="https://github.com/fady-abdelmalak"
+            class="hover:text-blue-600 transition-colors duration-200 flex items-center justify-center gap-2"
+          >
+            <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+              <path
+                d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+              />
+            </svg>
+            GitHub
+          </a>
+        </div>
+      </header>
 
-</body>
+      <!-- Summary Section -->
+      <section class="mb-8 sm:mb-12 no-break">
+        <h2
+          class="text-2xl font-semibold text-gray-800 mb-4 sm:mb-6 section-title"
+        >
+          Professional Summary
+        </h2>
+        <p class="text-base sm:text-lg text-gray-600 leading-relaxed">
+          Experienced Software Engineer with over 15 years of expertise in web
+          application development. Specialized in TypeScript, Angular, and
+          modern JavaScript frameworks. Proven track record of delivering
+          high-quality, scalable applications and mentoring junior developers.
+          Currently working at Turner & Townsend, focusing on enterprise-level
+          software solutions.
+        </p>
+      </section>
+
+      <!-- Skills Section -->
+      <section class="mb-8 sm:mb-12 no-break">
+        <h2
+          class="text-2xl font-semibold text-gray-800 mb-4 sm:mb-6 section-title"
+        >
+          Technical Skills
+        </h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 sm:gap-6 skill-grid">
+          <div
+            class="skill-card bg-white p-4 sm:p-6 rounded-lg shadow-sm print-shadow print-border"
+          >
+            <h3 class="font-semibold text-gray-800 mb-3 sm:mb-4 text-lg">
+              Frontend
+            </h3>
+            <div class="flex flex-wrap gap-2">
+              <span
+                class="skill-tag px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm"
+                >TypeScript</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm"
+                >Angular</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm"
+                >NgRx</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm"
+                >RxJS</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm"
+                >HTML5</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm"
+                >SASS</span
+              >
+            </div>
+          </div>
+          <div
+            class="skill-card bg-white p-4 sm:p-6 rounded-lg shadow-sm print-shadow print-border"
+          >
+            <h3 class="font-semibold text-gray-800 mb-3 sm:mb-4 text-lg">
+              Tools & Libraries
+            </h3>
+            <div class="flex flex-wrap gap-2">
+              <span
+                class="skill-tag px-3 py-1 bg-green-50 text-green-700 rounded-full text-sm"
+                >Git / GitHub</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-green-50 text-green-700 rounded-full text-sm"
+                >Webpack</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-green-50 text-green-700 rounded-full text-sm"
+                >.NET Core</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-green-50 text-green-700 rounded-full text-sm"
+                >Public Cloud</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-green-50 text-green-700 rounded-full text-sm"
+                >Version Control</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-green-50 text-green-700 rounded-full text-sm"
+                >Agile</span
+              >
+            </div>
+          </div>
+          <div
+            class="skill-card bg-white p-4 sm:p-6 rounded-lg shadow-sm print-shadow print-border"
+          >
+            <h3 class="font-semibold text-gray-800 mb-3 sm:mb-4 text-lg">
+              Soft Skills
+            </h3>
+            <div class="flex flex-wrap gap-2">
+              <span
+                class="skill-tag px-3 py-1 bg-purple-50 text-purple-700 rounded-full text-sm"
+                >Problem Solving</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-purple-50 text-purple-700 rounded-full text-sm"
+                >Technical Requirements</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-purple-50 text-purple-700 rounded-full text-sm"
+                >Business Requirements</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-purple-50 text-purple-700 rounded-full text-sm"
+                >Communication</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-purple-50 text-purple-700 rounded-full text-sm"
+                >Usability</span
+              >
+              <span
+                class="skill-tag px-3 py-1 bg-purple-50 text-purple-700 rounded-full text-sm"
+                >Responsive Design</span
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Experience Section -->
+      <section class="mb-8 sm:mb-12 no-break">
+        <h2
+          class="text-2xl font-semibold text-gray-800 mb-4 sm:mb-6 section-title"
+        >
+          Professional Experience
+        </h2>
+
+        <div class="space-y-6 sm:space-y-8">
+          <div
+            class="experience-card bg-white p-6 sm:p-8 rounded-lg shadow-sm print-shadow print-border no-break"
+          >
+            <div
+              class="experience-header flex flex-col sm:flex-row justify-between items-start mb-4"
+            >
+              <div>
+                <h3 class="text-xl font-semibold text-gray-800">
+                  Software Engineer
+                </h3>
+                <p class="text-gray-600">Turner & Townsend</p>
+              </div>
+              <p class="text-gray-500 font-medium experience-date">
+                Apr 2023 - Present
+              </p>
+            </div>
+            <ul
+              class="list-disc list-inside text-gray-600 space-y-2 sm:space-y-3 mt-4"
+            >
+              <li>
+                Working with TypeScript, Angular, and NgRx for enterprise-level
+                applications
+              </li>
+              <li>
+                Collaborating with cross-functional teams to deliver
+                high-quality software solutions
+              </li>
+              <li>
+                Implementing best practices in frontend development and code
+                architecture
+              </li>
+            </ul>
+          </div>
+
+          <div
+            class="experience-card bg-white p-6 sm:p-8 rounded-lg shadow-sm print-shadow print-border no-break"
+          >
+            <div
+              class="experience-header flex flex-col sm:flex-row justify-between items-start mb-4"
+            >
+              <div>
+                <h3 class="text-xl font-semibold text-gray-800">
+                  Software Developer
+                </h3>
+                <p class="text-gray-600">Muddy Boots Software</p>
+              </div>
+              <p class="text-gray-500 font-medium experience-date">
+                Oct 2016 - Apr 2023
+              </p>
+            </div>
+            <ul
+              class="list-disc list-inside text-gray-600 space-y-2 sm:space-y-3 mt-4"
+            >
+              <li>
+                Developed and maintained web applications using TypeScript and
+                Angular
+              </li>
+              <li>
+                Implemented complex UI components and features using NgRx and
+                RxJS
+              </li>
+              <li>Worked with .NET Core backend and cloud technologies</li>
+              <li>
+                Collaborated with UX designers to implement responsive and
+                user-friendly interfaces
+              </li>
+            </ul>
+          </div>
+
+          <div
+            class="experience-card bg-white p-6 sm:p-8 rounded-lg shadow-sm print-shadow print-border no-break"
+          >
+            <div
+              class="experience-header flex flex-col sm:flex-row justify-between items-start mb-4"
+            >
+              <div>
+                <h3 class="text-xl font-semibold text-gray-800">
+                  Senior Web Developer
+                </h3>
+                <p class="text-gray-600">Desert Fox</p>
+              </div>
+              <p class="text-gray-500 font-medium experience-date">
+                Jan 2014 - Oct 2016
+              </p>
+            </div>
+            <ul
+              class="list-disc list-inside text-gray-600 space-y-2 sm:space-y-3 mt-4"
+            >
+              <li>
+                Implemented high-quality software solutions using cutting-edge
+                technology
+              </li>
+              <li>
+                Developed web applications with focus on performance and user
+                experience
+              </li>
+              <li>
+                Led frontend development initiatives and mentored junior
+                developers
+              </li>
+            </ul>
+          </div>
+
+          <div
+            class="experience-card bg-white p-6 sm:p-8 rounded-lg shadow-sm print-shadow print-border no-break"
+          >
+            <div
+              class="experience-header flex flex-col sm:flex-row justify-between items-start mb-4"
+            >
+              <div>
+                <h3 class="text-xl font-semibold text-gray-800">
+                  Senior S/W Developer
+                </h3>
+                <p class="text-gray-600">IT Fusion software house</p>
+              </div>
+              <p class="text-gray-500 font-medium experience-date">
+                Aug 2012 - Dec 2013
+              </p>
+            </div>
+            <ul
+              class="list-disc list-inside text-gray-600 space-y-2 sm:space-y-3 mt-4"
+            >
+              <li>
+                Created portal for medical systems with focus on user experience
+              </li>
+              <li>
+                Implemented web applications using modern frontend technologies
+              </li>
+              <li>
+                Collaborated with stakeholders to gather and implement
+                requirements
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <!-- Education Section -->
+      <section class="mb-8 sm:mb-12 no-break">
+        <h2
+          class="text-2xl font-semibold text-gray-800 mb-4 sm:mb-6 section-title"
+        >
+          Education
+        </h2>
+        <div
+          class="education-card bg-white p-6 sm:p-8 rounded-lg shadow-sm print-shadow print-border"
+        >
+          <div class="flex flex-col sm:flex-row justify-between items-start">
+            <div class="flex-1">
+              <div
+                class="flex flex-col sm:flex-row justify-between items-start"
+              >
+                <h3 class="text-xl font-semibold text-gray-800">
+                  B.Sc, Computer Science
+                </h3>
+                <p class="text-gray-500 font-medium ml-0 sm:ml-4 mt-2 sm:mt-0">
+                  1999 - 2003
+                </p>
+              </div>
+              <p class="text-gray-600 mt-1">Cairo Computer Academy</p>
+              <p class="text-gray-600 mt-2">
+                Image Restoration in Image Processing Science using C#
+                <br />
+                - Restoring blurred image taken by a camera using Wiener-Filter
+                in the Frequency Domain
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
