--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           Fady Abdelmalak
         </h1>
         <p class="text-xl sm:text-2xl text-gray-600 font-light mb-4 sm:mb-6">
-          Software Engineer
+          Senior Software Engineer
         </p>
         <div
           class="flex flex-col sm:flex-row justify-center gap-2 sm:gap-6 mt-4 sm:mt-6 text-gray-600 header-links"
@@ -307,7 +307,7 @@
             >
               <div>
                 <h3 class="text-xl font-semibold text-gray-800">
-                  Software Engineer
+                  Senior Software Engineer
                 </h3>
                 <p class="text-gray-600">Turner & Townsend</p>
               </div>
@@ -341,7 +341,7 @@
             >
               <div>
                 <h3 class="text-xl font-semibold text-gray-800">
-                  Software Developer
+                  Senior Software Developer
                 </h3>
                 <p class="text-gray-600">Muddy Boots Software</p>
               </div>
