remove color from Technical Skills

--- a/index.html
+++ b/index.html
@@ -196,27 +196,27 @@
             </h3>
             <div class="flex flex-wrap gap-2">
               <span
-                class="skill-tag px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >TypeScript</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >Angular</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >NgRx</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >RxJS</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >HTML5</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >SASS</span
               >
             </div>
@@ -229,27 +229,27 @@
             </h3>
             <div class="flex flex-wrap gap-2">
               <span
-                class="skill-tag px-3 py-1 bg-green-50 text-green-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >Git / GitHub</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-green-50 text-green-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >Webpack</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-green-50 text-green-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >.NET Core</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-green-50 text-green-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >Public Cloud</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-green-50 text-green-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >Version Control</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-green-50 text-green-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >Agile</span
               >
             </div>
@@ -262,27 +262,27 @@
             </h3>
             <div class="flex flex-wrap gap-2">
               <span
-                class="skill-tag px-3 py-1 bg-purple-50 text-purple-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >Problem Solving</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-purple-50 text-purple-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >Technical Requirements</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-purple-50 text-purple-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >Business Requirements</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-purple-50 text-purple-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >Communication</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-purple-50 text-purple-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >Usability</span
               >
               <span
-                class="skill-tag px-3 py-1 bg-purple-50 text-purple-700 rounded-full text-sm"
+                class="skill-tag px-3 py-1 text-gray-700 border border-gray-200 rounded-full text-sm"
                 >Responsive Design</span
               >
             </div>
